# stable-diffusion-webui-forge-nunchaku

./: .gitignore  README.md  convert_qwen_encoder.py  requirements.txt  test_cv2_bootstrap_patch.py
Changelog/: CHANGELOG.md
ComfyUI-nunchaku/: .tracking  README.md  __init__.py  pyproject.toml  utils.py
ComfyUI-nunchaku/example_workflows/: nunchaku-z-image-turbo-controlnet.json  nunchaku-z-image-turbo-lora.json  nunchaku-z-image-turbo.json
ComfyUI-nunchaku/model_configs/: zimage.py
ComfyUI-nunchaku/model_patcher/: zimage.py
ComfyUI-nunchaku/test_data/: custom_nodes.yaml  models.yaml
ComfyUI-nunchaku/wrappers/: flux.py
backend/: loader.py
backend/huggingface/: __init__.py
backend/modules/: k_model.py
backend/nn/: _qwen_lora.py  _zimage_lora.py  comfy_model_base.py  nunchaku_sdxl_clip.py  nunchaku_sdxl_unet.py  nunchaku_sdxl_unet_append.py  qwen_vae.py  svdq.py
backend/patcher/: base.py  controlnet.py  controlnet_comfy.py  unet.py
backend/sampling/: sampling_function.py
extensions-builtin/adetailer/: .gitignore  README.md  install.py  pyproject.toml
extensions-builtin/adetailer/.github/workflows/: test.yml
extensions-builtin/adetailer/aaaaaa/: ui.py
extensions-builtin/adetailer/adetailer/: __init__.py  __version__.py  args.py  common.py  insightface_detector.py  mediapipe.py  ultralytics.py
extensions-builtin/adetailer/scripts/: !adetailer.py
extensions-builtin/adetailer/tests/: test_args.py  test_ultralytics.py
extensions-builtin/sd_forge_lora/: networks.py
modules/: initialize.py  launch_utils.py  paths.py  sd_samplers_common.py  ui.py
modules/RES4LYF/: __init__.py  conditioning.py  (+12 more)
modules_forge/: forge_res4lyf_samplers.py  forge_version.py  initialization.py  main_entry.py  presets.py  supported_controlnet.py  supported_controlnet_flux.py  supported_controlnet_qwen_image.py  supported_controlnet_zit.py
(+54 files in other folders)
