[project]
name = "adetailer"
description = "An object detection and auto-mask extension for stable diffusion webui."
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "AGPL-3.0" }
dependencies = [
    "ultralytics>=8.3.0",  # Updated for YOLOv11 support
    "pydantic<3",
    "rich>=13",
    "huggingface_hub",
    "requests",  # For YOLOv11 model download
    # InsightFace is installed manually via install.py for Python 3.13 compatibility
]
keywords = [
    "stable-diffusion",
    "stable-diffusion-webui",
    "adetailer",
    "ultralytics",
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/ussoewwin/ADetailer_without_mediapipe"

[project.optional-dependencies]
dev = ["ruff", "pre-commit", "devtools"]
test = ["pytest", "hypothesis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "adetailer/__version__.py"

[tool.isort]
profile = "black"
known_first_party = ["launch", "modules"]

[tool.ruff]
target-version = "py39"
extend-exclude = ["modules"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "I001",
    "ISC",
    "N",
    "PD",
    "PERF",
    "PL",
    "PIE",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
]
ignore = ["B905", "E501", "PLR2004", "PLW0603"]
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["launch", "modules"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
